count_trips 예시 수행 및 conda py3 환경 구축 ts